# versa

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.workstreams/codex-cli-substrate/: design.md  tracker.org
docs/: RELEASING.md  gather-playbook.md
docs/rfc/: 0001-codex-app-server-sdk.md
src/versa/: __init__.py  cli.py  extractor_normalizer.py  orchestrator.py  policy.py  reducer.py  solver.py  verifier.py
src/versa/api/: app.py  deps.py  dtos.py  mappers.py  routes.py  session_service.py
src/versa/eval/: __init__.py  harness.py
src/versa/export/: __init__.py  renderer.py
src/versa/gather/: __init__.py  factory.py  formatters.py  session.py  tabs.py
src/versa/gather/tui/: app.py  widgets.py
src/versa/llm/: __init__.py  base.py  codex_cli.py  factory.py  mock.py  schema.py
src/versa/models/: __init__.py  delta.py  state.py
src/versa/store/: __init__.py  base.py  factory.py  memory.py  schema.sql  schema.sqlite.sql  sqlite.py
tests/: conftest.py  fixtures.py  test_api.py  test_clarification_loop.py  test_codex_cli_parsing.py  test_codex_e2e.py  test_codex_schema.py  test_export_renderer.py  test_extractor_normalizer.py  test_gather_formatters.py  test_gather_session.py  test_gather_tui.py  test_orchestrator.py  test_policy.py  test_policy_clarifications.py  test_reducer.py  test_requirements_orchestrator.py  test_requirements_policy.py  test_requirements_verifier.py  test_sqlite_store.py  test_verifier.py
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
ui/e2e/: gather-e2e-full.spec.ts  gather-prod.spec.ts  gather-restart.spec.ts  gather.spec.ts  globalSetup.ts  helpers.ts  preserveSession.ts
ui/src/: App.tsx  index.css
ui/src/gather/: ChatPanel.tsx  DocumentPreview.tsx  ExportView.tsx  FactsPanel.tsx  GatherExplorer.tsx  OpenQuestions.tsx  SlotProgress.tsx  types.ts
ui/src/lib/: api.ts
